--- a/app/views/indexProviderPage.scala.html
+++ b/app/views/indexProviderPage.scala.html
@@ -1,4 +1,4 @@
-@(list:Seq[String],list2:Seq[String],login:String,isAdmin:Boolean)
+@(list:Seq[String],list2:Seq[provider],login:String,isAdmin:Boolean)
 <html>
 
     <head>
