--- a/app/views/providerrPage.scala.html
+++ b/app/views/providerrPage.scala.html
@@ -1,4 +1,4 @@
-@(items:Seq[String],items2:Seq[String],login:String,isAdmin:Boolean)
+@(nameColomn:Seq[String],win:Seq[provider],login:String,isAdmin:Boolean)
 <html>
 
     <head>
@@ -32,18 +32,18 @@
                 @if(login.isEmpty) {
 
                     <li><a href="@routes.mainPageController.contactPage("",isAdmin)">Контакты </a ></li>
-                    <li><a href="@routes.mainPageController.providerPage("",isAdmin)">Поставщики </a></li>
+                    <li><a href="@routes.ProviderController.providerPage("",isAdmin)">Поставщики </a></li>
                     <li><a href="@routes.WineController.catalogPage("",isAdmin)">Каталог </a></li>
                     <li><a href="@routes.mainPageController.projectPage("",isAdmin)">О проекте </a></li>
                 }
                 @if(!(login.isEmpty)){
 
                     <li><a href="@routes.mainPageController.contactPage(login,isAdmin)">Контакты </a ></li>
-                    <li><a href="@routes.mainPageController.providerPage(login,isAdmin)">Поставщики </a></li>
+                    <li><a href="@routes.ProviderController.providerPage(login,isAdmin)">Поставщики </a></li>
                     <li><a href="@routes.WineController.catalogPage(login,isAdmin)">Каталог </a></li>
                     <li><a href="@routes.mainPageController.projectPage(login,isAdmin)">О проекте </a></li>
                     @if(isAdmin){
-                        <li><a href=#>Добавить поставщика </a></li>
+                        <li><a href="@routes.ProviderController.renderAddProvider(login)">Добавить поставщика </a></li>
                         <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
                     }
                 }
@@ -56,17 +56,17 @@
 
                 @*вывод колонки*@
             @colomn(i:Int)=@{
-                val it = items
+                val it = nameColomn
                 it(i)
             }
                 @*вывод строки*@
             @display(i:Int)=@{
-                val it = items2
+                val it = win
                 it(i)
             }
                 @*всего колонок*@
             @sizeItems()=@{
-                val sizeItems = items.length
+                val sizeItems = nameColomn.length
                 sizeItems
             }
                 @*количество страниц*@
@@ -77,7 +77,7 @@
             }
                 @*всего записываемых элементов*@
             @sizeItems2()=@{
-                val sizeItems2 = items2.length
+                val sizeItems2 = win.length
                 sizeItems2
 
             }
@@ -91,13 +91,21 @@
                     <th>@colomn(j-1)</th>
                 }
                 </tr>
-                @for(i<-1 to sizeItems2) {
+                @win.map { item =>
+                    <th>@item.getName</th>
+                    <th>@item.getPhone</th>
+                    <th>@item.getAddress</th>
 
-                    <td>@display(i - 1)</td>
-                    @if(i%(sizeItems())==0){
-                        <tr></tr>
-                    }
+
+                @if(isAdmin) {
+                    <th><a href="@routes.ProviderController.renderUpdateProviderInfo(item.getId_provider,login)">Редактировать</a>
+                        <a href="@routes.ProviderController.deleteProvider(item.getId_provider, login)" > Удалить </a><th>
                 }
+
+                    <tr></tr>
+                }
+
+
 
             </table>
             <br>
