--- a/app/views/catalogPage.scala.html
+++ b/app/views/catalogPage.scala.html
@@ -1,10 +1,16 @@
-@(nameColomn:Seq[String],win:Seq[wine],login:String,isAdmin:Boolean)
+@(nameColomn:Seq[String],win:Seq[wine],login:String,isAdmin:Boolean,bookForm : play.data.Form[LoginForm], registrationForm : play.data.Form[User], error: Integer, wineForm : play.data.Form[wine])
 <html>
 
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/logo.jpg")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
+        <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
+
+        @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
+        <script src="@routes.Assets.versioned("javascripts/jquery-2.2.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
 
     </head>
     <body>
@@ -12,13 +18,146 @@
         <div align="center">
             <h2>Barton & Guestier</h2>
 
+
+                <!-- Модальное окно №1 -->
+            <a href="#x" class="overlay" id="win1"></a>
+            <div class="popup">
+                @helper.form(action = routes.LoginController.checkingLoginForm(), 'id -> "slick-login"){
+                    <div class="modal-header">
+
+                        <h1 class="modal-title">Вход в личный кабинет</h1>
+                    </div>
+
+                    <br>
+                    @helper.inputText(bookForm("login"),'_showConstraints ->false, 'placeholder -> "Логин",'required -> "required")
+                    @helper.inputPassword(bookForm("password"),'_showConstraints ->false, 'placeholder -> "Пароль",'required -> "required")
+
+                    <div class="modal-footer">
+                        <input type ="submit" value="Войти">
+                    </div>
+
+
+                    <a href="@routes.UsersController.renderAddUserForm(false)" class="slick-login2">Регистрация</a>
+
+                }
+                <a class="close"title="Закрыть" href="#close"></a>
+            </div>
+
+
+
+                <!-- Модальное окно №2 -->
+            <a href="#x" class="overlay" id="win2"></a>
+            <div class="popup">
+                <div class="modal-header">
+
+                    <h1 class="modal-title">Регистрация </h1>
+                </div>
+
+                @helper.form(action = routes.UsersController.addingUser(isAdmin), 'id -> "slick-login"){
+
+                    @helper.inputText(registrationForm("login"),'_showConstraints ->false,'placeholder -> "Логин",'required -> "required")
+
+                    @helper.inputText(registrationForm("password"),'_showConstraints ->false,'placeholder -> "Ваш сложный пароль",'required -> "required")
+                    @if(isAdmin){
+                        Права администратора:@helper.checkbox(registrationForm("isAdmin"))
+                    }
+
+                    <div class="modal-footer">
+                        <input type ="submit" value="Создать">
+                    </div>
+
+
+
+                }
+                <a class="close"title="Закрыть" href="#close"></a>
+            </div>
+
+
+
+
+
+
+
+            @if(error == 1 || error ==2) {
+                    <!-- Модальное окно при загрузке -->
+
+                <div class="container">
+                        <!-- Modal -->
+                    <div class="modal fade" id="myModal" role="dialog">
+                        <div class="modal-dialog">
+
+                                <!-- Modal content-->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal"></button>
+                                    <h4 class="modal-title">Ошибка! </h4>
+                                </div>
+                                <div class="modal-body">
+                                    <h4> Неверный пароль или логин!</h4>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <script>
+                        $(document).ready(function () {
+                            $('#myModal').modal('show');
+                        });
+                </script>
+            }
+
+
+                <!-- Модальное окно №3 -->
+            <a href="#x" class="overlay" id="win3"></a>
+            <div class="popup" overflow: scroll;>
+                @helper.form(action = routes.LoginController.checkingLoginForm(), 'id -> "slick-login"){
+                    <div class="modal-header">
+
+                        <h1 class="modal-title">Регистрация товара</h1>
+                    </div>
+
+                    <br>
+
+
+
+                    @helper.form(action = routes.WineController.addingWine(login), 'id -> "slick-login"){
+                        @helper.inputText(wineForm("name"),'_showConstraints ->false,'placeholder -> "Название вина")
+                        @helper.inputText(wineForm("colour"),'_showConstraints ->false,'placeholder -> "Цвет")
+                        @helper.inputText(wineForm("country"),'_showConstraints ->false,'placeholder -> "Страна")
+                        @helper.inputText(wineForm("brand"),'_showConstraints ->false,'placeholder -> "Бренд")
+                        @helper.inputText(wineForm("shelf_life"),'_showConstraints ->false,'placeholder -> "Срок годности")
+                        @helper.inputText(wineForm("sugar"),'_showConstraints ->false,'placeholder -> "Сахар")
+                        @helper.inputText(wineForm("grape_sort"),'_showConstraints ->false,'placeholder -> "Сорт винограда")
+                        @helper.inputText(wineForm("price"),'_showConstraints ->false,'placeholder -> "Цена")
+                        @helper.inputText(wineForm("value"),'_showConstraints ->false,'placeholder -> "Объем")
+                        @helper.inputText(wineForm("degree"),'_showConstraints ->false,'placeholder -> "Крепость")
+
+
+                    <div class="modal-footer">
+                        <input type ="submit" value="Создать">
+                    </div>
+
+
+                    <a href="@routes.UsersController.renderAddUserForm(false)" class="slick-login2">Регистрация</a>
+
+                }
+                }
+            <a class="close"title="Закрыть" href="#close"></a>
+            </div>
+
+
             <p></p>
             <ul class="menu" >
                 <li> <a href=#>Личный кабинет </a>
                     <ul class="submenu">
                         @if(login.isEmpty) {
-                            <li><a href="@routes.LoginController.renderLoginForm()">Вход</a></li>
-                            <li><a href="@routes.UsersController.renderAddUserForm(isAdmin)">Регистрация</a></li>
+                            <li><a href="#win1" class="button button-green">Вход</a></li>
+                            <li><a href="#win2" class="button button-green">Регистрация</a></li>
+                            @*<li><a href="@routes.LoginController.renderLoginForm()">Вход</a></li>*@
+                            @*<li><a href="@routes.UsersController.renderAddUserForm(isAdmin)">Регистрация</a></li>*@
                         }
                         @if(!(login.isEmpty)){
                             <li><a href="@routes.LoginController.logout()">Выход</a></li>
@@ -44,7 +183,8 @@
                     <li><a href="@routes.WineController.catalogPage(login,isAdmin)">Каталог </a></li>
                     <li><a href="@routes.mainPageController.projectPage(login,isAdmin)">О проекте </a></li>
                    @if(isAdmin){
-                   <li><a href="@routes.WineController.renderAddWine(login)">Добавить товар </a></li>
+                   @*<li><a href="@routes.WineController.renderAddWine(login)">Добавить товар </a></li>*@
+                       <li><a href="#win3" class="button button-green">Добавить товар</a></li>
                    <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
                     }
                 }
@@ -88,6 +228,7 @@
                 cod(i)
             }
 
+
             <table>
 
             <tr>
@@ -122,6 +263,7 @@
             <br>
             <p></p>
     </body>
+
 
 </html>
 
