--- a/app/views/providerrPage.scala.html
+++ b/app/views/providerrPage.scala.html
@@ -1,10 +1,16 @@
-@(nameColomn:Seq[String],win:Seq[provider],login:String,isAdmin:Boolean)
+@(items:Seq[String],items2:Seq[provider],login:String,isAdmin:Boolean,bookForm : play.data.Form[LoginForm], registrationForm : play.data.Form[User], error: Integer)
 <html>
 
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
+        <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
+
+        @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
+        <script src="@routes.Assets.versioned("javascripts/jquery-2.2.0.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.versioned("javascripts/bootstrap.min.js")" type="text/javascript"></script>
 
     </head>
     <body>
@@ -12,13 +18,107 @@
         <div align="center">
             <h2>Barton & Guestier</h2>
 
+
+                <!-- Модальное окно №1 -->
+            <a href="#x" class="overlay" id="win1"></a>
+            <div class="popup">
+                @helper.form(action = routes.LoginController.checkingLoginForm(), 'id -> "slick-login"){
+                    <div class="modal-header">
+
+                        <h1 class="modal-title">Вход в личный кабинет</h1>
+                    </div>
+
+                    <br>
+                    @helper.inputText(bookForm("login"),'_showConstraints ->false, 'placeholder -> "Логин",'required -> "required")
+                    @helper.inputPassword(bookForm("password"),'_showConstraints ->false, 'placeholder -> "Пароль",'required -> "required")
+
+                    <div class="modal-footer">
+                        <input type ="submit" value="Войти">
+                    </div>
+
+
+                    <a href="@routes.UsersController.renderAddUserForm(false)" class="slick-login2">Регистрация</a>
+
+                }
+            <a class="close"title="Закрыть" href="#close"></a>
+            </div>
+
+
+
+                <!-- Модальное окно №2 -->
+            <a href="#x" class="overlay" id="win2"></a>
+            <div class="popup">
+                <div class="modal-header">
+
+                    <h1 class="modal-title">Регистрация </h1>
+                </div>
+
+                @helper.form(action = routes.UsersController.addingUser(isAdmin), 'id -> "slick-login"){
+
+                    @helper.inputText(registrationForm("login"),'_showConstraints ->false,'placeholder -> "Логин",'required -> "required")
+
+                    @helper.inputText(registrationForm("password"),'_showConstraints ->false,'placeholder -> "Ваш сложный пароль",'required -> "required")
+                    @if(isAdmin){
+                        Права администратора:@helper.checkbox(registrationForm("isAdmin"))
+                    }
+
+                    <div class="modal-footer">
+                        <input type ="submit" value="Создать">
+                    </div>
+
+
+
+                }
+                <a class="close"title="Закрыть" href="#close"></a>
+            </div>
+
+
+
+
+
+
+
+            @if(error == 1 || error ==2) {
+                    <!-- Модальное окно при загрузке -->
+
+                <div class="container">
+                        <!-- Modal -->
+                    <div class="modal fade" id="myModal" role="dialog">
+                        <div class="modal-dialog">
+
+                                <!-- Modal content-->
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <button type="button" class="close" data-dismiss="modal"></button>
+                                    <h4 class="modal-title">Ошибка! </h4>
+                                </div>
+                                <div class="modal-body">
+                                    <h4> Неверный пароль или логин!</h4>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <script>
+                        $(document).ready(function () {
+                            $('#myModal').modal('show');
+                        });
+                </script>
+            }
+
+
             <p></p>
             <ul class="menu" >
                 <li> <a href=#>Личный кабинет </a>
                     <ul class="submenu">
                         @if(login.isEmpty) {
-                            <li><a href="@routes.LoginController.renderLoginForm()">Вход</a></li>
-                            <li><a href="@routes.UsersController.renderAddUserForm(isAdmin)">Регистрация</a></li>
+                            <li><a href="#win1" class="button button-green">Вход</a></li>
+                            <li><a href="#win2" class="button button-green">Регистрация</a></li>
+                            @*<li><a href="@routes.LoginController.renderLoginForm()">Вход</a></li>*@
+                            @*<li><a href="@routes.UsersController.renderAddUserForm(isAdmin)">Регистрация</a></li>*@
                         }
                         @if(!(login.isEmpty)){
                             <li><a href="@routes.LoginController.logout()">Выход</a></li>
@@ -32,18 +132,20 @@
                 @if(login.isEmpty) {
 
                     <li><a href="@routes.mainPageController.contactPage("",isAdmin)">Контакты </a ></li>
-                    <li><a href="@routes.ProviderController.providerPage("",isAdmin)">Поставщики </a></li>
+                    @*<li><a href="@routes.mainPageController.providerPage("",isAdmin)">Поставщики </a></li>*@
+                    <li><a href="@routes.ProviderController.providerPage(login,isAdmin)">Поставщики </a></li>
                     <li><a href="@routes.WineController.catalogPage("",isAdmin)">Каталог </a></li>
                     <li><a href="@routes.mainPageController.projectPage("",isAdmin)">О проекте </a></li>
                 }
                 @if(!(login.isEmpty)){
 
                     <li><a href="@routes.mainPageController.contactPage(login,isAdmin)">Контакты </a ></li>
+                    @*<li><a href="@routes.mainPageController.providerPage(login,isAdmin)">Поставщики </a></li>*@
                     <li><a href="@routes.ProviderController.providerPage(login,isAdmin)">Поставщики </a></li>
                     <li><a href="@routes.WineController.catalogPage(login,isAdmin)">Каталог </a></li>
                     <li><a href="@routes.mainPageController.projectPage(login,isAdmin)">О проекте </a></li>
                     @if(isAdmin){
-                        <li><a href="@routes.ProviderController.renderAddProvider(login)">Добавить поставщика </a></li>
+                        <li><a href=#>Добавить поставщика </a></li>
                         <li><a href="@routes.UsersController.usersList(login)">Список пользователей </a></li>
                     }
                 }
@@ -56,17 +158,17 @@
 
                 @*вывод колонки*@
             @colomn(i:Int)=@{
-                val it = nameColomn
+                val it = items
                 it(i)
             }
                 @*вывод строки*@
             @display(i:Int)=@{
-                val it = win
+                val it = items2
                 it(i)
             }
                 @*всего колонок*@
             @sizeItems()=@{
-                val sizeItems = nameColomn.length
+                val sizeItems = items.length
                 sizeItems
             }
                 @*количество страниц*@
@@ -77,7 +179,7 @@
             }
                 @*всего записываемых элементов*@
             @sizeItems2()=@{
-                val sizeItems2 = win.length
+                val sizeItems2 = items2.length
                 sizeItems2
 
             }
@@ -91,21 +193,13 @@
                     <th>@colomn(j-1)</th>
                 }
                 </tr>
-                @win.map { item =>
-                    <th>@item.getName</th>
-                    <th>@item.getPhone</th>
-                    <th>@item.getAddress</th>
+                @for(i<-1 to sizeItems2) {
 
-
-                @if(isAdmin) {
-                    <th><a href="@routes.ProviderController.renderUpdateProviderInfo(item.getId_provider,login)">Редактировать</a>
-                        <a href="@routes.ProviderController.deleteProvider(item.getId_provider, login)" > Удалить </a><th>
+                    <td>@display(i - 1)</td>
+                    @if(i%(sizeItems())==0){
+                        <tr></tr>
+                    }
                 }
-
-                    <tr></tr>
-                }
-
-
 
             </table>
             <br>
