--- a/app/views/indexCatalogPage.scala.html
+++ b/app/views/indexCatalogPage.scala.html
@@ -1,4 +1,4 @@
-@(list:Seq[String],list2:Seq[wine],login:String,isAdmin:Boolean,bookForm : play.data.Form[LoginForm],registrationForm : play.data.Form[User],error:Integer,wineForm:play.data.Form[wine])
+@(list:Seq[String],list2:Seq[wine],login:String,isAdmin:Boolean,bookForm : play.data.Form[LoginForm],registrationForm : play.data.Form[User],error:Integer,wineForm:play.data.Form[wine],updateForm: play.data.Form[UpdateWine],win:wine)
 <html>
 
     <head>
@@ -16,7 +16,7 @@
             </div>
         }
     @main("Каталог вина"){
-        @catalogPage(list,list2,login,isAdmin,bookForm,registrationForm,error,wineForm)
+        @catalogPage(list,list2,login,isAdmin,bookForm,registrationForm,error,wineForm,updateForm,win)
     }
 
     </body>
