--- a/app/views/catalogPage.scala.html
+++ b/app/views/catalogPage.scala.html
@@ -6,6 +6,7 @@
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.versioned("images/logo.jpg")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/fontXml.css")">
         <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/startPage.css")">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.versioned("stylesheets/search.css")">
         <link rel="stylesheet" type="text/css" href='@routes.Assets.versioned("stylesheets/bootstrap.min.css")'>
 
         @*<script src="@routes.Assets.versioned("javascripts/window.js")" type="text/javascript"></script>*@
@@ -18,6 +19,16 @@
         <div align="center">
             <h2>Barton & Guestier</h2>
 
+                <!--форма поиска -->
+            <div class="search">
+            @helper.form(action = routes.WineController.searchCatalogPage(login,isAdmin)){
+
+                @helper.inputText(wineForm("name"),'_showConstraints ->false, 'placeholder -> "Введите название",'required -> "required")
+                @helper.inputText(wineForm("price"),'_showConstraints ->false, 'placeholder -> "Цена",'required -> "required")
+                <button type="submit">Поиск</button>
+
+            }
+            </div>
 
                 <!-- Модальное окно №1 -->
             <a href="#x" class="overlay" id="win1"></a>
@@ -147,9 +158,6 @@
 
             <a class="close"title="Закрыть" href="#close"></a>
             </div>
-
-
-
 
 
 
@@ -323,8 +331,8 @@
 
                 @if(isAdmin) {
                     <th>
-                        <li><a href="#win4" class="button button-green">Редактировать</a></li>
-                        @*<a href="@routes.WineController.renderUpdateWineInfo(item.getId_product,login)">Редактировать</a>*@
+                        @*<li><a href="#win4" class="button button-green">Редактировать</a></li>*@
+                        <a href="@routes.WineController.renderUpdateWineInfo(item.getId_product,login)">Редактировать</a>
                         <a href="@routes.WineController.deleteWine(item.getId_product, login)" > Удалить </a><th>
                 }
 
