--- a/app/views/catalogPage.scala.html
+++ b/app/views/catalogPage.scala.html
@@ -24,37 +24,7 @@
             <h2>Barton & Guestier</h2>
 
 
-                <!--форма поиска -->
-            <div class="search">
-            @helper.form(action = routes.WineController.searchCatalogPage(login,isAdmin)){
 
-                @helper.inputText(wineForm("name"),'_showConstraints ->false, 'placeholder -> "Введите название")
-                @helper.inputText(searchform("minprice"),'_showConstraints ->false, 'placeholder -> "Цена От ")
-                @helper.inputText(searchform("maxprice"),'_showConstraints ->false, 'placeholder -> "Цена До")
-
-
-                <button type="submit">Поиск</button>
-
-            }
-
-            </div>
-
-                <!--сортировка
-                         0- по цене
-                         1 - по названию
-                         2 - по умолчанию-->
-
-                @helper.form(action = routes.WineController.sortCatalogPage(login,isAdmin,0)){
-
-                    <button type="submit">Cортировка по цене </button>
-
-                }
-                @helper.form(action = routes.WineController.sortCatalogPage(login,isAdmin,1)){
-                    <button type="submit">Cортировка по названию </button>
-                }
-                @helper.form(action = routes.WineController.sortCatalogPage(login,isAdmin,2)){
-                    <button type="submit">Cортировка по умолчанию </button>
-                }
 
                 <!-- Модальное окно №1 -->
             <a href="#x" class="overlay" id="win1"></a>
@@ -335,41 +305,87 @@
             }
 
 
-            <table>
-
-            <tr>
-
-            @for(j <- 2 to sizeItems) {
-            <th>@colomn(j-1)</th>
-            }
-            </tr>
-                @win.map { item =>
-                    <th>@item.getName</th>
-                    <th>@item.getColour</th>
-                    <th>@item.getCountry</th>
-                    <th>@item.getBrand</th>
-                    <th>@item.getShelf_life</th>
-                    <th>@item.getSugar</th>
-                    <th>@item.getGrape_sort</th>
-                    <th>@item.getPrice</th>
-                    <th>@item.getValue</th>
-                    <th>@item.getDegree</th>
-
-                @if(isAdmin) {
-                    <th>
-                        @*<li><a href="#win4" class="button button-green">Редактировать</a></li>*@
-                        <a href="@routes.WineController.renderUpdateWineInfo(item.getId_product,login)">Редактировать</a>
-                        <a href="@routes.WineController.deleteWine(item.getId_product, login)" > Удалить </a><th>
-                }
-
-                    <tr></tr>
-                }
 
 
+            <table style="border: 0px">
+                <tr>
+                    <td>
+                        <table >
+                            <tr>
+                            @for(j <- 2 to sizeItems) {
+                                <th>@colomn(j-1)</th>
+                            }
+                            </tr>
+                            <tr colspan="2"> @win.map { item =>
+                                <th>@item.getName</th>
+                                <th>@item.getColour</th>
+                                <th>@item.getCountry</th>
+                                <th>@item.getBrand</th>
+                                <th>@item.getShelf_life</th>
+                                <th>@item.getSugar</th> 
+                                <th>@item.getGrape_sort</th>
+                                <th>@item.getPrice</th>
+                                <th>@item.getValue</th>
+                                <th>@item.getDegree</th>
 
+                            @if(isAdmin) {
+                                <th>
+                                    @*<li><a href="#win4" class="button button-green">Редактировать</a></li>*@
+                                    <a href="@routes.WineController.renderUpdateWineInfo(item.getId_product, login)">
+                                        Редактировать</a>
+                                    <a href="@routes.WineController.deleteWine(item.getId_product, login)" >
+                                        Удалить </a></th>
+                            }
+                            <tr></tr>
+                            }
+                            </tr>
+                        </table>
+                    </td>
+                    <td>
+                        <table>
+                            <tr> <!--форма поиска -->
+                                <div class="search">
+                                @helper.form(action = routes.WineController.searchCatalogPage(login,isAdmin)){
+
+                                    @helper.inputText(wineForm("name"),'_showConstraints ->false, 'placeholder -> "Введите название")
+                                    @helper.inputText(searchform("minprice"),'_showConstraints ->false, 'placeholder -> "Цена От ")
+                                    @helper.inputText(searchform("maxprice"),'_showConstraints ->false, 'placeholder -> "Цена До")
+
+
+                                    <button type="submit">Поиск</button>
+
+                                }
+
+                                </div>
+
+                                    <!--сортировка
+                         0- по цене
+                         1 - по названию
+                         2 - по умолчанию-->
+
+                                @helper.form(action = routes.WineController.sortCatalogPage(login,isAdmin,0)){
+
+
+                                    <button type="submit">Cортировка по цене </button>
+
+                                }
+                            <p></p>
+                                @helper.form(action = routes.WineController.sortCatalogPage(login,isAdmin,1)){
+                                    <button type="submit">Cортировка по названию </button>
+                                }
+                            <p></p>
+                                @helper.form(action = routes.WineController.sortCatalogPage(login,isAdmin,2)){
+                                    <button type="submit">Cортировка по умолчанию </button>
+                                }
+                            </tr>
+                            @*<tr colspan="2"></tr>*@
+                        </table>
+                    </td>
+                </tr>
             </table>
             <br>
             <p></p>
+        </div>
     </body>
 
 
