--- a/public/stylesheets/startPage.css
+++ b/public/stylesheets/startPage.css
@@ -120,7 +120,7 @@ ul.menu > li:hover > ul.submenu {
     display: block;
 }
 button{
-    color: antiquewhite;
+    color: #e42423;
 }
 
 
@@ -413,6 +413,40 @@ h1 {
 
 
 
+ button {
+    width: 50%;
+    height: 50px;
+    margin-top: 7px;
+    color: #fff;
+    font-size: 18px;
+    font-weight: bold;
+    text-shadow: 0px -1px 0px #5b6ddc;
+    outline: none;
+    border: 1px solid rgba(0, 0, 0, .49);
+
+    -webkit-background-clip: padding-box;
+    -moz-background-clip: padding-box;
+    background-clip: padding-box;
+    border-radius: 6px;
+
+    background-color: #5466da;
+    background-image: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.97) 0%, #e4473d 100%);
+    background-image: -moz-linear-gradient(bottom, #5466da 0%, #768ee4 100%);
+    background-image: -o-linear-gradient(bottom, #5466da 0%, #768ee4 100%);
+    background-image: -ms-linear-gradient(bottom, #5466da 0%, #768ee4 100%);
+    background-image: linear-gradient(bottom, #5466da 0%, #768ee4 100%);
+
+    -webkit-box-shadow: inset 0px 1px 0px #9ab1ec;
+    box-shadow: inset 0px 1px 0px #000000;
+
+    cursor: pointer;
+
+    -webkit-transition: all .1s ease-in-out;
+    -moz-transition: all .1s ease-in-out;
+    -o-transition: all .1s ease-in-out;
+    -ms-transition: all .1s ease-in-out;
+    transition: all .1s ease-in-out;
+}
 
 
 
