--- a/app/views/catalogPage.scala.html
+++ b/app/views/catalogPage.scala.html
@@ -349,14 +349,12 @@
                                 @helper.form(action = routes.WineController.searchCatalogPage(login,isAdmin)){
 
                                     @helper.inputText(wineForm("name"),'_showConstraints ->false, 'placeholder -> "Введите название", '_label ->"")
+                                    @helper.inputText(wineForm("degree"),'_showConstraints ->false, 'placeholder -> "Крепость", '_label ->"")
+                                    @helper.inputText(wineForm("country"),'_showConstraints ->false, 'placeholder -> "Страна", '_label ->"")
                                     @helper.inputText(searchform("minprice"),'_showConstraints ->false, 'placeholder -> "Цена От ", '_label ->"")
                                     @helper.inputText(searchform("maxprice"),'_showConstraints ->false, 'placeholder -> "Цена До", '_label ->"")
 
-
                                     <button type="submit">Поиск</button>
-
-
-
                                 }
 
                                 </div>
@@ -364,10 +362,11 @@
                                     <!--сортировка
                          0- по цене
                          1 - по названию
-                         2 - по умолчанию-->
+                         2 - по умолчанию
+                         3 - по крепости-->
+
 
                                 @helper.form(action = routes.WineController.sortCatalogPage(login,isAdmin,0)){
-
 
                                     <button type="submit">Cортировка по цене </button>
 
@@ -379,6 +378,10 @@
                             <p></p>
                                 @helper.form(action = routes.WineController.sortCatalogPage(login,isAdmin,2)){
                                     <button type="submit">Cортировка по умолчанию </button>
+                                }
+                                <p></p>
+                                @helper.form(action = routes.WineController.sortCatalogPage(login,isAdmin,3)){
+                                    <button type="submit">Cортировка по крепости </button>
                                 }
                             </tr>
                             @*<tr colspan="2"></tr>*@
